--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Extraction.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,17 +15,14 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "vzSCw1loHokY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Predict_Development/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -49,19 +47,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HRyr5TqzI30d",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "eF6Vnzl3RiBX",
         "colab_type": "code",
         "colab": {}
@@ -78,6 +63,49 @@
         "    # Code Here\n",
         "    \n",
         "    return None"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EqyppOrHToQ-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "68adec1a-ec0b-4c3c-da3c-12579f0e954a"
+      },
+      "source": [
+        "1+1"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cubR4xcYTqBj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
