--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -16,6 +16,49 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "I5nbkmC9vk8F",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Function 1:\n",
+        "\n",
+        "Write a function which:\n",
+        "- Scrapes _\"Eskom_SA\"_ tweets from Twitter. \n",
+        "\n",
+        "Function Specifications:\n",
+        "- The function should return a dataframe with the scraped tweets with just the \"_Tweets_\" and \"_Date_\". \n",
+        "- Will take in the ```consumer key,  consumer secret code, access token``` and ```access secret code```.\n",
+        "\n",
+        "NOTE:\n",
+        "The dataframe should have the same column names as those in your SQL Database table where you store the tweets."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eF6Vnzl3RiBX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET ):\n",
+        "    \n",
+        "    ''' Return a new dataframe with data scraped from Twitter\n",
+        "        \n",
+        "        Args: 'CONSUMER_KEY', 'CONSUMER_SECRET', 'ACCESS_TOKEN', 'ACCESS_SECRET'\n",
+        "\n",
+        "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
+        "    ''' \n",
+        "    # Code Here\n",
+        "    \n",
+        "    return None"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "mkUQUNKzpUN2",
         "colab_type": "text"
       },
