--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Extraction.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,14 +15,109 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t6z7ncXirnv7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Building an ETL Pipeline\n",
+        "\n",
+        "As the second part of the predict for Gather, you will need to build a pipeline of functions in python which does the following:\n",
+        "\n",
+        "1. Function to connect to twitter and scrapes \"Eskom_SA\" tweets.\n",
+        "<br>\n",
+        "<br>\n",
+        "2. Cleans/Processes the tweets from the scraped tweets which will create a dataframe with two new columns using the following functions: <br>\n",
+        "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; a) Hashtag Remover from Analyse Functions\n",
+        "<br>\n",
+        "<br>\n",
+        "3. Functions which connects to your SQL database and uploads the tweets into the table you store the tweets in the database."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "vzSCw1loHokY",
+        "id": "jtYowqI_RiBL",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# General:\n",
+        "import tweepy           # To consume Twitter's API\n",
+        "import pandas as pd     # To handle data\n",
+        "import numpy as np      # For numerical computation\n",
+        "import json\n",
+        "# For plotting and visualization:\n",
+        "from IPython.display import display\n",
+        "import pyodbc\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EykRIHe8ykYS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Consumer and Access details\n",
+        "\n",
+        "Fill in your Consumer and Access details you should have recieved when applying for a Twitter API. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lquylmvOnFvt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Consumer:\n",
+        "CONSUMER_KEY    = \n",
+        "CONSUMER_SECRET = \n",
+        "\n",
+        "# Access:\n",
+        "ACCESS_TOKEN  = \n",
+        "ACCESS_SECRET = "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "01RMZH30RiBU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# API's setup:\n",
+        "def twitter_setup():\n",
+        "    \"\"\"\n",
+        "    Utility function to setup the Twitter's API\n",
+        "    with access and consumer keys from Twitter.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Authentication and access using keys:\n",
+        "    auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
+        "    auth.set_access_token(ACCESS_TOKEN, ACCESS_SECRET)\n",
+        "\n",
+        "    # Return API with authentication:\n",
+        "    api = tweepy.API(auth, timeout=1000)\n",
+        "    return api"
       ],
       "execution_count": 0,
       "outputs": []
@@ -45,19 +141,6 @@
         "NOTE:\n",
         "The dataframe should have the same column names as those in your SQL Database table where you store the tweets."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HRyr5TqzI30d",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
