--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Extraction/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -159,8 +159,22 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
+        "    # create new data frame with colimns \"Tweets\" and \"Date\"\n",
         "    \n",
         "    return None"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TpK9KneMqzgu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
       ],
       "execution_count": 0,
       "outputs": []
