Added comments to launch pull request

--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Loading.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Loading/Loading.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -255,6 +255,8 @@
         "  '''\n",
         "\n",
         "  ### Code Here\n",
+        "  #loading: Mikael\n",
+        "  #updating tables in SQL: Monica\n",
         "\n",
         "  return None "
       ],
