--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -159,22 +159,22 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
-        "    # create new data frame with colimns \"Tweets\" and \"Date\"\n",
+        "    extractor = twitter_setup()\n",
         "    \n",
-        "    return None"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TpK9KneMqzgu",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
+        "    # We create a tweet list as follows:\n",
+        "    tweets = extractor.user_timeline(screen_name=\"Eskom_SA\", \n",
+        "                                     count=100,\n",
+        "                                     include_rts=False)\n",
+        "    print(f\"Number of tweets extracted: {len(tweets)}.\\n\")\n",
+        "    \n",
+        "    # We create a pandas dataframe as follows:\n",
+        "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
+        "                                              [(tweet.created_at) for tweet in tweets]]),\n",
+        "                                              columns=['Tweets','Date'])\n",
+        "    # We display the first 10 elements of the dataframe:\n",
+        "    final_df = data.head(10)\n",
+        "    \n",
+        "    return final_df"
       ],
       "execution_count": 0,
       "outputs": []
