--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -186,27 +186,33 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 325
+          "height": 256
         },
-        "outputId": "37aad677-7d5f-487a-ded6-f549e6d759e9"
+        "outputId": "60339fda-5640-4da0-9bd3-b8ab8444540b"
       },
       "source": [
         "print(twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET))"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-f300df6975b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwitter_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCONSUMER_KEY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCONSUMER_SECRET\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mACCESS_TOKEN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mACCESS_SECRET\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-4-d21f11a2262c>\u001b[0m in \u001b[0;36mtwitter_df\u001b[0;34m(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET)\u001b[0m\n\u001b[1;32m      8\u001b[0m     ''' \n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# Code Here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mextractor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtwitter_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# We create a tweet list as follows:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-3-12c5261b3a4b>\u001b[0m in \u001b[0;36mtwitter_setup\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Authentication and access using keys:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mauth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtweepy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOAuthHandler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCONSUMER_KEY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCONSUMER_SECRET\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mauth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_access_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mACCESS_TOKEN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mACCESS_SECRET\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'tweepy' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Number of tweets extracted: 97.\n",
+            "\n",
+            "                                              Tweets                Date\n",
+            "0  Do you know who supplies your electricity? If ... 2020-03-05 08:30:00\n",
+            "1  #Eskom #MediaStatement\\n\\nEskom to institute l... 2020-03-05 08:23:49\n",
+            "2  #EskomExpoTurns40 Have YOU participated in Esk... 2020-03-05 08:22:00\n",
+            "3  @Deeh20150626 If you are a municipal customer ... 2020-03-05 07:18:06\n",
+            "4  @4Tune_20 @Abramjee Report electricity theft a... 2020-03-05 06:51:51\n",
+            "5  Eskom prepaid customers are requested to direc... 2020-03-05 06:45:00\n",
+            "6  #POWERALERT 1\\nDate: 05 March 2020\\n\\nNo loads... 2020-03-05 06:08:34\n",
+            "7  Please call your service provider if experienc... 2020-03-04 16:15:00\n",
+            "8  #POWERALERT 2\\nDate: 04 March 2020\\n\\nNo loads... 2020-03-04 15:26:14\n",
+            "9  Only Eskom trained and authorized personnel ar... 2020-03-04 14:30:00\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
