Revert "Created using Colaboratory"
This reverts commit f442de7437dc4da87a891ed00e1f8df840948779.

--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -159,22 +159,8 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
-        "    extractor = twitter_setup()\n",
         "    \n",
-        "    # We create a tweet list as follows:\n",
-        "    tweets = extractor.user_timeline(screen_name=\"Eskom_SA\", \n",
-        "                                     count=100,\n",
-        "                                     include_rts=False)\n",
-        "    print(f\"Number of tweets extracted: {len(tweets)}.\\n\")\n",
-        "    \n",
-        "    # We create a pandas dataframe as follows:\n",
-        "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
-        "                                              [(tweet.created_at) for tweet in tweets]]),\n",
-        "                                              columns=['Tweets','Date'])\n",
-        "    # We display the first 10 elements of the dataframe:\n",
-        "    final_df = data.head(10)\n",
-        "    \n",
-        "    return final_df"
+        "    return None"
       ],
       "execution_count": 0,
       "outputs": []
