--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -6,6 +6,7 @@
       "name": "Loading.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Transforming.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Extraction/Transforming.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -212,8 +213,41 @@
         "    '''\n",
         "    \n",
         "    ### Code Here\n",
-        "    \n",
-        "    return None"
+        "    def extract_municipality_hashtags(df):\n",
+        "    mun_dict = {'@CityofCTAlerts' : 'Cape Town',\n",
+        "                '@CityPowerJhb' : 'Johannesburg',\n",
+        "                '@eThekwiniM' : 'eThekwini' ,\n",
+        "                '@EMMInfo' : 'Ekurhuleni',\n",
+        "                '@centlecutility' : 'Mangaung',\n",
+        "                '@NMBmunicipality' : 'Nelson Mandela Bay',\n",
+        "                '@CityTshwane' : 'Tshwane'}\n",
+        "\n",
+        " \n",
+        "    l = 0\n",
+        "\n",
+        "    for tweet in df['Tweets']:\n",
+        "        tweet = tweet.split(' ')\n",
+        "        for key in mun_dict.keys():\n",
+        "            if key in tweet:\n",
+        "                df.loc[l, 'municipality'] = mun_dict[key]\n",
+        "           \n",
+        "    l += 1\n",
+        "\n",
+        "    df['hashtags'] = df['Tweets'].str.lower().str.split()\n",
+        "\n",
+        "    i = 0\n",
+        "\n",
+        "    for tweet in df['hashtags']:\n",
+        "        hashtags = []\n",
+        "    for word in tweet:\n",
+        "        if word.startswith('#'):\n",
+        "            hashtags.append(word)\n",
+        "            df.loc[i, 'hashtags'] = hashtags\n",
+        "        if len(hashtags) == 0:\n",
+        "            df.loc[i, 'hashtags'] = np.NaN\n",
+        "        \n",
+        "    i += 1\n",
+        "    return df\n"
       ],
       "execution_count": 0,
       "outputs": []
