updated code to display GMT +2 in tweet times

--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Extraction.ipynb",
+      "name": "Copy of Extraction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -58,6 +58,7 @@
         "import pandas as pd     # To handle data\n",
         "import numpy as np      # For numerical computation\n",
         "import json\n",
+        "from datetime import datetime, timedelta\n",
         "# For plotting and visualization:\n",
         "from IPython.display import display\n",
         "# import pyodbc\n"
@@ -169,7 +170,7 @@
         "    \n",
         "    # We create a pandas dataframe as follows:\n",
         "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
-        "                                              [(tweet.created_at) for tweet in tweets]]),\n",
+        "                                              [((tweet.created_at) + timedelta(hours=2)) for tweet in tweets]]),\n",
         "                                              columns=['Tweets','Date'])\n",
         "    # We display the first 10 elements of the dataframe:\n",
         "    final_df = data.head(10)\n",
@@ -184,11 +185,11 @@
       "metadata": {
         "id": "k19hM6Y0M07z",
         "colab_type": "code",
+        "outputId": "81f44f64-66ee-4b52-c68a-6077ac1c0ed5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 256
-        },
-        "outputId": "60339fda-5640-4da0-9bd3-b8ab8444540b"
+        }
       },
       "source": [
         "print(twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET))"
@@ -198,19 +199,19 @@
         {
           "output_type": "stream",
           "text": [
-            "Number of tweets extracted: 97.\n",
+            "Number of tweets extracted: 96.\n",
             "\n",
             "                                              Tweets                Date\n",
-            "0  Do you know who supplies your electricity? If ... 2020-03-05 08:30:00\n",
-            "1  #Eskom #MediaStatement\\n\\nEskom to institute l... 2020-03-05 08:23:49\n",
-            "2  #EskomExpoTurns40 Have YOU participated in Esk... 2020-03-05 08:22:00\n",
-            "3  @Deeh20150626 If you are a municipal customer ... 2020-03-05 07:18:06\n",
-            "4  @4Tune_20 @Abramjee Report electricity theft a... 2020-03-05 06:51:51\n",
-            "5  Eskom prepaid customers are requested to direc... 2020-03-05 06:45:00\n",
-            "6  #POWERALERT 1\\nDate: 05 March 2020\\n\\nNo loads... 2020-03-05 06:08:34\n",
-            "7  Please call your service provider if experienc... 2020-03-04 16:15:00\n",
-            "8  #POWERALERT 2\\nDate: 04 March 2020\\n\\nNo loads... 2020-03-04 15:26:14\n",
-            "9  Only Eskom trained and authorized personnel ar... 2020-03-04 14:30:00\n"
+            "0  Meter tampering is when you cause the meter to... 2020-03-06 10:30:00\n",
+            "1  Interfering with or vandalising Eskom property... 2020-03-06 08:34:00\n",
+            "2  #POWERALERT 1\\n\\nDate: 06 March 2020\\n\\nNo loa... 2020-03-06 07:54:58\n",
+            "3  #Eskom #MediaStatement\\n\\nEskom notes allegati... 2020-03-05 21:28:53\n",
+            "4  DYK that you can report #poweroutages on MyEsk... 2020-03-05 18:00:00\n",
+            "5  #POWERALERT 2\\nDate: 05 March 2020\\n\\nNo loads... 2020-03-05 17:32:36\n",
+            "6  Use electricity smartly to save costs and help... 2020-03-05 16:28:00\n",
+            "7  Cable theft is one of the main reasons for con... 2020-03-05 14:08:00\n",
+            "8  Do you know who supplies your electricity? If ... 2020-03-05 10:30:00\n",
+            "9  #Eskom #MediaStatement\\n\\nEskom to institute l... 2020-03-05 10:23:49\n"
           ],
           "name": "stdout"
         }
