Added Olwethu, Courtney code to loading. Loading phase can start now

--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -86,12 +86,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = \n",
-        "CONSUMER_SECRET = \n",
+        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
+        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = \n",
-        "ACCESS_SECRET = "
+        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
+        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -159,8 +159,22 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
+        "    extractor = twitter_setup()\n",
         "    \n",
-        "    return None"
+        "    # We create a tweet list as follows:\n",
+        "    tweets = extractor.user_timeline(screen_name=\"Eskom_SA\", \n",
+        "                                     count=100,\n",
+        "                                     include_rts=False)\n",
+        "    print(f\"Number of tweets extracted: {len(tweets)}.\\n\")\n",
+        "    \n",
+        "    # We create a pandas dataframe as follows:\n",
+        "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
+        "                                              [(tweet.created_at) for tweet in tweets]]),\n",
+        "                                              columns=['Tweets','Date'])\n",
+        "    # We display the first 10 elements of the dataframe:\n",
+        "    #final_df = data.head(10)\n",
+        "    \n",
+        "    return data"
       ],
       "execution_count": 0,
       "outputs": []
@@ -210,10 +224,41 @@
         "\n",
         "        Returns: Original dataframe, 'df', with two new columns, 'hashtags' and 'municipality'\n",
         "    '''\n",
+        "    mun_dict = {'@CityofCTAlerts' : 'Cape Town',\n",
+        "                '@CityPowerJhb' : 'Johannesburg',\n",
+        "                '@eThekwiniM' : 'eThekwini' ,\n",
+        "                '@EMMInfo' : 'Ekurhuleni',\n",
+        "                '@centlecutility' : 'Mangaung',\n",
+        "                '@NMBmunicipality' : 'Nelson Mandela Bay',\n",
+        "                '@CityTshwane' : 'Tshwane'}\n",
+        "\n",
+        " \n",
+        "    l = 0\n",
+        "    for tweet in df['Tweets']:\n",
+        "      tweet = tweet.split(' ')\n",
+        "      for key in mun_dict.keys():\n",
+        "        if key in tweet:\n",
+        "          df.loc[l, 'municipality'] = mun_dict[key]       \n",
+        "      l += 1\n",
+        "\n",
+        "    # Create 'hashtags' column: Mikael\n",
+        "    df['hashtags'] = df['Tweets'].str.lower().str.split()\n",
+        "\n",
+        "    # Extract hashtags from Tweets: Monica\n",
+        "    hashtagslist = []\n",
+        "    i = 0\n",
+        "    for tweet in df['hashtags']:\n",
+        "      hashtags = []\n",
+        "      for word in tweet:\n",
+        "        if word.startswith('#'):\n",
+        "          hashtags.append(word)\n",
+        "      hashtagslist.append(hashtags)\n",
+        "      i += 1\n",
         "    \n",
-        "    ### Code Here\n",
-        "    \n",
-        "    return None"
+        "    df['hashtags'] = hashtagslist\n",
+        "    # Fill empty values in 'hashtags' columns with np.nan: Courtney\n",
+        "\n",
+        "    return df"
       ],
       "execution_count": 0,
       "outputs": []
