imported datetime into file

--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -61,7 +61,8 @@
         "from datetime import datetime, timedelta\n",
         "# For plotting and visualization:\n",
         "from IPython.display import display\n",
-        "# import pyodbc\n"
+        "# import pyodbc\n",
+        "from datetime import datetime, timedelta\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -183,33 +184,36 @@
       "metadata": {
         "id": "k19hM6Y0M07z",
         "colab_type": "code",
-        "outputId": "81f44f64-66ee-4b52-c68a-6077ac1c0ed5",
+        "outputId": "7558e19b-9405-4ede-b537-94ff84d3a435",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 289
         }
       },
       "source": [
         "print(twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET))"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Number of tweets extracted: 96.\n",
             "\n",
-            "                                              Tweets                Date\n",
-            "0  Meter tampering is when you cause the meter to... 2020-03-06 10:30:00\n",
-            "1  Interfering with or vandalising Eskom property... 2020-03-06 08:34:00\n",
-            "2  #POWERALERT 1\\n\\nDate: 06 March 2020\\n\\nNo loa... 2020-03-06 07:54:58\n",
-            "3  #Eskom #MediaStatement\\n\\nEskom notes allegati... 2020-03-05 21:28:53\n",
-            "4  DYK that you can report #poweroutages on MyEsk... 2020-03-05 18:00:00\n",
-            "5  #POWERALERT 2\\nDate: 05 March 2020\\n\\nNo loads... 2020-03-05 17:32:36\n",
-            "6  Use electricity smartly to save costs and help... 2020-03-05 16:28:00\n",
-            "7  Cable theft is one of the main reasons for con... 2020-03-05 14:08:00\n",
-            "8  Do you know who supplies your electricity? If ... 2020-03-05 10:30:00\n",
-            "9  #Eskom #MediaStatement\\n\\nEskom to institute l... 2020-03-05 10:23:49\n"
+            "                                               Tweets                Date\n",
+            "0   Overhead power cables are normally suspended o... 2020-03-06 12:30:00\n",
+            "1   Meter tampering is when you cause the meter to... 2020-03-06 10:30:00\n",
+            "2   Interfering with or vandalising Eskom property... 2020-03-06 08:34:00\n",
+            "3   #POWERALERT 1\\n\\nDate: 06 March 2020\\n\\nNo loa... 2020-03-06 07:54:58\n",
+            "4   #Eskom #MediaStatement\\n\\nEskom notes allegati... 2020-03-05 21:28:53\n",
+            "..                                                ...                 ...\n",
+            "91  @nzuza18 Register your details on our careers ... 2020-02-26 11:13:32\n",
+            "92  Only Eskom trained and authorized personnel ar... 2020-02-26 10:20:00\n",
+            "93  #ESKOMFREESTATE #MEDIASTATEMENT\\n\\nNOTICE TO S... 2020-02-26 09:35:41\n",
+            "94       @Bonolo_maphutha Thanks.  We will follow-up. 2020-02-26 09:27:41\n",
+            "95  @tboymunyai @GautengProvince @GautengANC @EFFS... 2020-02-26 09:26:16\n",
+            "\n",
+            "[96 rows x 2 columns]\n"
           ],
           "name": "stdout"
         }
