Added Olwethu's import of datetime

--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -58,9 +58,11 @@
         "import pandas as pd     # To handle data\n",
         "import numpy as np      # For numerical computation\n",
         "import json\n",
+        "from datetime import datetime, timedelta\n",
         "# For plotting and visualization:\n",
         "from IPython.display import display\n",
-        "import pyodbc\n"
+        "# import pyodbc\n",
+        "from datetime import datetime, timedelta\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -86,12 +88,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = \n",
-        "CONSUMER_SECRET = \n",
+        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
+        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = \n",
-        "ACCESS_SECRET = "
+        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
+        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -159,8 +161,20 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
+        "    extractor = twitter_setup()\n",
         "    \n",
-        "    return None"
+        "    # We create a tweet list as follows:\n",
+        "    tweets = extractor.user_timeline(screen_name=\"Eskom_SA\", \n",
+        "                                     count=100,\n",
+        "                                     include_rts=False)\n",
+        "    print(f\"Number of tweets extracted: {len(tweets)}.\\n\")\n",
+        "    \n",
+        "    # We create a pandas dataframe as follows:\n",
+        "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
+        "                                              [((tweet.created_at) + timedelta(hours=2)) for tweet in tweets]]),\n",
+        "                                              columns=['Tweets','Date'])\n",
+        "    \n",
+        "    return data"
       ],
       "execution_count": 0,
       "outputs": []
