--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -9,8 +9,21 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
     }
   },
   "cells": [
@@ -27,8 +40,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "t6z7ncXirnv7",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "t6z7ncXirnv7"
       },
       "source": [
         "# Building an ETL Pipeline\n",
@@ -48,8 +61,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jtYowqI_RiBL",
         "colab_type": "code",
+        "id": "jtYowqI_RiBL",
         "colab": {}
       },
       "source": [
@@ -68,8 +81,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EykRIHe8ykYS",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "EykRIHe8ykYS"
       },
       "source": [
         "# Consumer and Access details\n",
@@ -80,8 +93,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lquylmvOnFvt",
         "colab_type": "code",
+        "id": "lquylmvOnFvt",
         "colab": {}
       },
       "source": [
@@ -99,8 +112,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "01RMZH30RiBU",
         "colab_type": "code",
+        "id": "01RMZH30RiBU",
         "colab": {}
       },
       "source": [
@@ -125,8 +138,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I5nbkmC9vk8F",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "I5nbkmC9vk8F"
       },
       "source": [
         "# Function 1:\n",
@@ -145,8 +158,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eF6Vnzl3RiBX",
         "colab_type": "code",
+        "id": "eF6Vnzl3RiBX",
         "colab": {}
       },
       "source": [
@@ -182,8 +195,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mkUQUNKzpUN2",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "mkUQUNKzpUN2"
       },
       "source": [
         "# Function 2: Removing hashtags and the municipalities\n",
@@ -198,21 +211,140 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o12Z44mZRiBb",
         "colab_type": "code",
-        "colab": {}
+        "id": "o12Z44mZRiBb",
+        "colab": {},
+        "outputId": "111197a8-50cc-4373-8ea0-6db7188d88f4"
       },
       "source": [
         "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of tweets extracted: 93.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tweets</th>\n",
+              "      <th>Date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>@TSIKALIRA Hi, pls DM us your contact details ...</td>\n",
+              "      <td>2020-03-10 06:32:50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>#POWERALERT 1\\nDate: 10 March 2020\\n\\nStage 2 ...</td>\n",
+              "      <td>2020-03-10 05:37:17</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>Protect your electrical appliances by unpluggi...</td>\n",
+              "      <td>2020-03-10 04:30:00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>@Jeandre_S @CityTshwane @SABCNewsOnline @SABCR...</td>\n",
+              "      <td>2020-03-09 17:32:41</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>4</td>\n",
+              "      <td>@Antifreez777za @SikonathiM Please see our tim...</td>\n",
+              "      <td>2020-03-09 17:26:55</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>88</td>\n",
+              "      <td>Before you leave the house, switch off or unpl...</td>\n",
+              "      <td>2020-03-02 04:10:00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>89</td>\n",
+              "      <td>#POWERALERT 1\\nDate: 01 March 2020\\n\\nNo loads...</td>\n",
+              "      <td>2020-03-01 17:04:06</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>90</td>\n",
+              "      <td>Report electricity theft anonymously to Eskom ...</td>\n",
+              "      <td>2020-03-01 16:30:00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>91</td>\n",
+              "      <td>#PublicSafety: Make sure that you and your fam...</td>\n",
+              "      <td>2020-03-01 13:06:00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>92</td>\n",
+              "      <td>Cable theft is one of the main reasons for con...</td>\n",
+              "      <td>2020-03-01 10:32:00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>93 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                               Tweets                Date\n",
+              "0   @TSIKALIRA Hi, pls DM us your contact details ... 2020-03-10 06:32:50\n",
+              "1   #POWERALERT 1\\nDate: 10 March 2020\\n\\nStage 2 ... 2020-03-10 05:37:17\n",
+              "2   Protect your electrical appliances by unpluggi... 2020-03-10 04:30:00\n",
+              "3   @Jeandre_S @CityTshwane @SABCNewsOnline @SABCR... 2020-03-09 17:32:41\n",
+              "4   @Antifreez777za @SikonathiM Please see our tim... 2020-03-09 17:26:55\n",
+              "..                                                ...                 ...\n",
+              "88  Before you leave the house, switch off or unpl... 2020-03-02 04:10:00\n",
+              "89  #POWERALERT 1\\nDate: 01 March 2020\\n\\nNo loads... 2020-03-01 17:04:06\n",
+              "90  Report electricity theft anonymously to Eskom ... 2020-03-01 16:30:00\n",
+              "91  #PublicSafety: Make sure that you and your fam... 2020-03-01 13:06:00\n",
+              "92  Cable theft is one of the main reasons for con... 2020-03-01 10:32:00\n",
+              "\n",
+              "[93 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UOuThS2kRiBf",
         "colab_type": "code",
+        "id": "UOuThS2kRiBf",
         "colab": {}
       },
       "source": [
@@ -266,8 +398,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "L9bXQ_k8xOjV",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "L9bXQ_k8xOjV"
       },
       "source": [
         "# Function 3: Updating SQL Database with pyODBC\n",
@@ -285,25 +417,202 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yqdiXb5JRiBo",
         "colab_type": "code",
+        "id": "yqdiXb5JRiBo",
         "colab": {}
       },
       "source": [
         "def pyodbc_twitter(connection, df, twitter_table):\n",
         "\n",
-        "  ''' Update 'Tweets' table in our SQL database\n",
+        "    ''' Update 'Tweets' table in our SQL database\n",
         "\n",
         "      Args: 'connection', 'df', 'twitter_table'\n",
         "\n",
         "      Returns: None, only updates the 'Twitter' table\n",
-        "  '''\n",
+        "    '''\n",
         "\n",
-        "  ### Code Here\n",
-        "  #loading: Mikael\n",
-        "  #updating tables in SQL: Monica\n",
+        "    ### Code Here\n",
+        "    #loading: Mikael\n",
+        "    df = pd.read_sql_query('select * from dbo.all_stations',connection)\n",
+        "    #updating tables in SQL: Monica\n",
         "\n",
-        "  return None "
+        "    return df.head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "Z0SyneGoPQLp",
+        "colab": {}
+      },
+      "source": [
+        "connection = pyodbc.connect(driver='{SQL Server}',\n",
+        "                      host='EDSA-3GKPSM2\\SQLEXPRESSMON',\n",
+        "                      database='gather_eskom_cleaned_columns',\n",
+        "                      trusted_connection='tcon',\n",
+        "                      user='sa')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "yP92dtK6PlI4",
+        "colab": {},
+        "outputId": "2c3aa1b5-89ef-4f7a-e1dd-53614bb98386"
+      },
+      "source": [
+        "df = twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of tweets extracted: 93.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "18tvTfm4S2I1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "twitter_table = extract_municipality_hashtags(df)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6QzEno8_S2I4",
+        "colab_type": "code",
+        "colab": {},
+        "outputId": "0b4e1dc5-df87-4bf0-b3f7-c43e578c539a"
+      },
+      "source": [
+        "pyodbc_twitter(connection, df, twitter_table)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>station_name</th>\n",
+              "      <th>total_installed_capacity</th>\n",
+              "      <th>total_nominal_capacity</th>\n",
+              "      <th>location</th>\n",
+              "      <th>station_type</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>Acacia</td>\n",
+              "      <td>171</td>\n",
+              "      <td>171</td>\n",
+              "      <td>Cape Town</td>\n",
+              "      <td>Gas/liquid fuel turbine stations</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>Ankerlig</td>\n",
+              "      <td>1338</td>\n",
+              "      <td>1327</td>\n",
+              "      <td>Atlantis</td>\n",
+              "      <td>Gas/liquid fuel turbine stations</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>Arnot</td>\n",
+              "      <td>2352</td>\n",
+              "      <td>2232</td>\n",
+              "      <td>Middelburg</td>\n",
+              "      <td>Coal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>Camden'</td>\n",
+              "      <td>1561</td>\n",
+              "      <td>1481</td>\n",
+              "      <td>Ermelo</td>\n",
+              "      <td>Coal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>4</td>\n",
+              "      <td>Colley Wobbles</td>\n",
+              "      <td>42</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Mbashe River</td>\n",
+              "      <td>Hydroelectric stations</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     station_name total_installed_capacity total_nominal_capacity  \\\n",
+              "0          Acacia                      171                    171   \n",
+              "1       Ankerlig                      1338                   1327   \n",
+              "2           Arnot                     2352                   2232   \n",
+              "3         Camden'                     1561                   1481   \n",
+              "4  Colley Wobbles                       42                      0   \n",
+              "\n",
+              "       location                      station_type  \n",
+              "0    Cape Town   Gas/liquid fuel turbine stations  \n",
+              "1      Atlantis  Gas/liquid fuel turbine stations  \n",
+              "2    Middelburg                              Coal  \n",
+              "3        Ermelo                              Coal  \n",
+              "4  Mbashe River            Hydroelectric stations  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hr7he5S5S2I7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
